Making the build script fit for the future.